app-1/deployment-api-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-api-v2
  namespace: app-1
  labels:
    app: core-api
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-api
      version: v2
  template:
    metadata:
      labels:
        app: core-api
        version: v2
    spec:
      containers:
      - name: core-api
        image: docker.io/cleancodeid/laravel-micro:latest
        ports:
        - containerPort: 8080
