app-1/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app1-gateway
  namespace: app-1
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - istio-app1.org
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app1-virtualservice
  namespace: app-1
spec:
  hosts:
  - istio-app1.org
  gateways:
  - app1-gateway
  http:
  - route:
    - destination:
        host: core-api
        subset: v1
        port:
          number: 8080
      weight: 50
    - destination:
        host: core-api
        subset: v2
        port:
          number: 8080
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app1-core-api-destinationrule
  namespace: app-1
spec:
  host: core-api
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
